# clean-core

./: .clang-format  CMakeLists.txt  README.md  claude.md
docs/: Coding Guidelines.md
src/clean-core/: allocation.cc  allocation.hh  array.cc  array.hh  assert-handler.hh  assert.cc  assert.hh  bit.hh  dummy.cc  dummy.hh  function_ref.hh  fwd.hh  macros.hh  mutex.hh  native.cc  native.hh  node_allocation.cc  node_allocation.hh  optional.hh  result.cc  result.hh  sequence.hh  span.hh  strided_span.hh  string.cc  string.hh  string_view.hh  to_debug_string.hh  to_string.cc  unique_array.hh  unique_function.hh  unique_vector.hh  utility.hh  vector.hh
src/clean-core/impl/: allocating_container.hh  object_lifetime_util.hh
tests/: array-test.cc  assert-test.cc  bit-test.cc  fixed-array-test.cc  function_ref-test.cc  invocable-test.cc  macros-test.cc  optional-test.cc  result-test.cc  span-test.cc  string-test.cc  string_view-test.cc  to_debug_string-test.cc  unique_function-test.cc  utility-test.cc
